# mulle-sde

./: .gitignore  .travis.yml  AGENTS.md  CMakeLists.txt  CMakePackage.cmake  CMakePackage.txt  CMakeSourcesAndHeaders.txt  COMMANDS-AI.md  COMMANDS.md  LICENSE  LLM_COMMAND_ANALYSIS_PROMPT.md  README.md  RELEASENOTES.md  TODO.md  compare_docs.sh  find-symbol.sh  generate_reference_docs.py  install  install-all  install.sh  installer  installer-all  mulle-sde  mulle-sde-cd  mulle-sde-completion.sh  mulle-sde-completion.sh.gpt5  mulle-sde-dependency.dot  mulle-sde-monitor.dot  mulle-sde-overview.dot  mulle-sde-sandbox.linux  mulle-sde.apparmor  mulle-sde.sublime-project
.github/: stale.yml
.github/workflows/: semgrep.yml
.mulle/etc/project/: formula-info.sh  version-info.sh
.mulle/etc/todo/: todo.txt
cola/: config.plist  description.md.bud  example.md.bud  executables.md.bud  info.md.bud  properties.plist  usage.md.bud  you-are-here.md.bud
dox/: CONVERT.md  Makefile  craft.dot  craft.graphml  craft2.graphml  mulle-sde-add.dot  mulle-sde-cmakelists.dot  mulle-sde-craft.dot  mulle-sde-dependency.dot  mulle-sde-environment.dot  mulle-sde-extension.dot  mulle-sde-find.dot  mulle-sde-library.dot  mulle-sde-linkorder.dot  mulle-sde-list.dot  mulle-sde-log.dot  mulle-sde-monitor.dot  mulle-sde-overview.dot  mulle-sde-patternfile.dot  mulle-sde-reflect.dot  mulle-sde-show.dot  mulle-sde-status.dot  mulle-sde-subproject.dot  mulle-sde-subprojects.dot  mulle-sde-tool.dot  mulle-sde-update.dot  reflect.dot
dox/reference/: add.md  addiction-dir.md  buildstatus.md  callback.md  clean.md  commands.md  common-unames.md  config.md  craft.md  craftinfo.md  craftorder.md  crun.md  debug.md  definition.md  dependency-dir.md  dependency.md  edit.md  environment.md  exec.md  export.md  extension.md  fetch.md  file.md  filename.md  find.md  get.md  headerorder.md  ignore.md  index.md  init-and-enter.md  init.md  install.md  json.md  kitchen-dir.md  libexec-dir.md  library-path.md  library.md  linkorder.md  list.md  log.md  (+38 more)
example/: create-cmakelists.sh
example/src/a/: a.c  a.h
example/src/b/: b.c  b.h
example/src/exe/: tool.c
example/tests/: run-all-tests.sh
mulle-project/: formula-info.sh  generate-formula.sh  version-info.sh
src/: mulle-sde-add.sh  mulle-sde-api.sh  mulle-sde-bash-completion.sh  mulle-sde-build.sh  mulle-sde-buildinfo.sh  mulle-sde-buildorder.sh  mulle-sde-clean.sh  mulle-sde-code.sh  mulle-sde-common.sh  mulle-sde-config.sh  mulle-sde-craft.sh  mulle-sde-craftinfo.sh  mulle-sde-craftorder.sh  mulle-sde-debug.sh  mulle-sde-definition.sh  mulle-sde-dependencies.sh  mulle-sde-dependency.sh  mulle-sde-edit.sh  mulle-sde-environment.sh  mulle-sde-export.sh  mulle-sde-extension.sh  mulle-sde-extensions.sh  mulle-sde-fetch.sh  mulle-sde-headerorder.sh  mulle-sde-howto.sh  mulle-sde-ignore.sh  mulle-sde-init.sh  mulle-sde-initsupport.sh  mulle-sde-install.sh  mulle-sde-libraries.sh  mulle-sde-library.sh  mulle-sde-linkorder.sh  mulle-sde-list.sh  mulle-sde-lsp.sh  mulle-sde-makeinfo.sh  mulle-sde-match.sh  mulle-sde-migrate.sh  mulle-sde-monitor.sh  mulle-sde-pattern.sh  mulle-sde-patternfile.sh  (+27 more)
src/extensions/c/: init
src/extensions/c/libexec/: classify-headers.sh  classify-sources.sh
src/extensions/c/project/executable/src/: main.c  version.h
src/extensions/cmake/: did-update-sourcetree  did-update-src  usage
src/extensions/cmake/project/executable/: CMakeDependenciesAndLibraries.cmake  CMakeDependenciesAndLibraries.txt  CMakeHeadersAndSources.cmake  CMakeHeadersAndSources.txt  CMakeLists.txt
src/extensions/common/: usage
src/extensions/common/etc/header/: directories
src/extensions/common/etc/source/: directories
src/extensions/common/etc/test/: directories  files
src/extensions/common/libexec/: classify-directory.sh
src/extensions/common/project/executable/: README.md
src/extensions/mulle-sde/extension/: usage
src/extensions/mulle-sde/extension/project/extension/: CMakeLists.txt  CMakePackage.cmake  LICENSE  README.md
src/extensions/mulle-sde/extension/project/extension/src/extensions/PROJECT_NAME/: inherit  type
src/extensions/mulle-sde/sde/: init  optionaltool  tool  type  usage
src/extensions/mulle-sde/sde/project/all/: README.md
src/extensions/mulle-sde/sde/share/ignore.d/: 00-directories--none
src/extensions/sde/project/executable/: README.md
src/extensions/test/libexec/: test-task.sh
src/extensions/test/share/match.d/: 40-test--testfile
src/mulle-env/plugins/: mulle.sh
src/mulle-sde/craftinfo/: init  usage
src/mulle-sde/craftinfo/project/all/craftinfo/ONESHOT_NAME/: CMakeLists.txt  build.sh-example
src/mulle-sde/craftinfo/project/all/craftinfo/ONESHOT_NAME-craftinfo/: CMakeLists.txt  LICENSE  README.md
src/mulle-sde/craftinfo/project/all/craftinfo/ONESHOT_NAME/mulle-make/: .ignore
src/mulle-sourcetree/plugins/: mulle-sde-supermarks.sh
test/: run-test
test/00-init-none/: run-test
test/00-init-none/test-vendor/a/project/all/: file11
test/00-init-none/test-vendor/b/project/executable/: file8
test/01-pattern/: run-test
test/02-subproject-share-symlink/: run-test
test/10-inherit-projectfiles/: run-test
test/10-inherit-projectfiles/test-vendor/a/project/executable/: file15
test/10-inherit-projectfiles/test-vendor/b/: inherit
test/10-inherit-projectfiles/test-vendor/b/project/all/: file6
test/20-files-unmatched/: run-test
test/20-oneshot-vars/: extra.txt  oneshot.txt  run-test
test/20-oneshot-vars/test-vendor/extra/project/all/PROJECT_SOURCE_DIR/: file
test/30-init-parameters/: extra.txt  run-test
test/40-upgrade/: run-test
test/40-upgrade/test-vendor/extra/: environment
test/40-upgrade/test-vendor/extra/project/all/dir/share/: file
test/50-definition-export/: run-test
test/51-craftinfo-export/: run-test
test/52-platform/: run-test
test/53-config-list/: run-test
test/54-test-platform-override/: run-test
test/55-scope-defaults/: run-test
test/60-project-rename/: run-test
test/70-dependency-insert/: run-test
tests/: run-test
tests/01-pattern/: run-test
(+2 files in other folders)
